# qstrat

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ing/fit/: cir.py  estimator.py  ll_estimator.py  minimizer.py  mle_estimator.py  models.py  ou.py  simulator.py  stepper.py  transition_density.py
ing/models/: cir.py  models.py  ou.py
ing/optm/: estimator.py  minimizer.py
ing/plots/: plot.py
ing/sim/: mc.py  scheme.py  simulator.py  stepper.py
ing/utils/: data_utils.py  estimators.py  numeric_utils.py
notebooks/: cir.ipynb  eda.ipynb  ou.ipynb  test.ipynb
qstrat/fit/: ll_estimator.py  mle_estimator.py  transition_density.py
qstrat/models/: cir.py  ou.py
qstrat/optm/: estimator.py
qstrat/sim/: scheme.py  simulator.py
